Chore: add map dependency

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
 
         <activity android:name="team.gdsc.shelper.activity.error.ErrorActivity" />
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
     </application>
 
 </manifest>
