--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Shelper.Splash">
 
         <activity
-            android:name="team.gdsc.shelper.activity.main.MainActivity"
+            android:name=".activity.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="team.gdsc.shelper.activity.error.ErrorActivity" />
+        <activity android:name=".activity.error.ErrorActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
