--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,5 @@ local.properties
 /build
 /buildSrc/.gradle/
 /buildSrc/build/
-/data/build
-/data/google-services.json
-/domain/build
-/presentation/build
-/presentation/release
-/data/src/main/kotlin/team/gdsc/shelper/data/secret/
+/app/build
+/app/release
