--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.error.ErrorActivity" />
-        <activity android:name=".activity.guide.GuideActivity" />
+        <activity
+            android:name=".activity.error.ErrorActivity"
+            android:theme="@style/Theme.Shelper" />
+
+        <activity
+            android:name=".activity.guide.GuideActivity"
+            android:theme="@style/Theme.Shelper" />
 
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
