Fix databinding error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:theme="@style/Theme.Shelper.Guide" />
 
         <activity
+            android:name=".activity.information.InformationActivitty"
+            android:theme="@style/Theme.Shelper.Guide" />
+
+        <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
             android:theme="@style/Theme.Shelper" />
 
